[package]
name = 'ferrum-network'
version = '0.0.1'
authors = ['Ferrum Network <https://github.com/ferrumnet>']
build = 'build.rs'
edition = '2021'
homepage = 'https://ferrum.network'
license = 'Unlicense'
publish = false
repository = 'https://github.com/ferrumnet/ferrum-network/'
description = 'Ferrum Network Poc Testnet'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ferrum-network"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
codec = { workspace = true }
futures = { version = "0.3.21" }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.22", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
color-print = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-network-common = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-rpc-api = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sc-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true }

# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-relay-chain = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }

# Frontier
fc-cli = { workspace = true }
fc-api = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-consensus = { workspace = true }
fp-dynamic-fee = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-storage = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
sc-consensus-aura = { workspace = true }
fp-account = { workspace = true }

# Local Dependencies
ferrum-primitives = { workspace = true }
ferrum-runtime = { workspace = true }
ferrum-testnet-runtime = { workspace = true }
pallet-quantum-portal = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = [
	"sql",
	"txpool",
]
runtime-benchmarks = [
	"ferrum-testnet-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"ferrum-testnet-runtime/try-runtime",
]
sql = [
	"fc-db/sql",
	"fc-mapping-sync/sql",
]
txpool = ["fc-rpc/txpool"]
