[package]
name = "ferrum-primitives"
version = "1.0.0-dev"
description = "Ferrum primitives"
authors = ["Ferrum Network"]
homepage = "https://ferrum.network/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/ferrum-x-network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { default-features = false, features = ['derive'], version = '2.1.2' }
parity-scale-codec = { default-features = false, features = ['derive'], version = '3.1.2' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master', version = '7.0.0' }
sp-application-crypto = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master', version = '7.0.0' }

[features]
default = ['std']
std = [
	'scale-info/std',
	'parity-scale-codec/std',
	'sp-runtime/std',
    'sp-application-crypto/std'
]

