[package]
name = "ferrum-primitives"
authors = ['Ferrum Network <https://github.com/ferrumnet/ferrum-network>']
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.1"
repository = 'https://github.com/ferrumnet/ferrum-network'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
blake2-rfc = { version = "0.2.18", optional = true, default-features = false }
ethereum = { version = "0.14.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.14", default-features = false }
hex = { version = "0.4", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac"] }
log = "0.4"
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
sha3 = { version = "0.10", default-features = false }
smallvec = "1.10.0"

# Substrate
cumulus-primitives-core = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["std"]
std = [
	"log/std",
	"full_crypto",
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"parity-scale-codec/std",
	"sha3/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"ethereum/std",
	"ethereum-types/std",
	"frame-support/std",
	"scale-info/std",
	"sp-runtime-interface/std",
]

full_crypto = [
	"blake2-rfc",
	"sp-runtime-interface/disable_target_static_assertions",
]
