[build-dependencies.substrate-wasm-builder]
branch = 'polkadot-v0.9.27'
git = 'https://github.com/paritytech/substrate'

[dependencies]
smallvec = "1.8.0"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.5'

[dependencies.fp-rpc]
default-features = false
branch = "polkadot-v0.9.27"
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-quantum-portal]
default-features = false
version = '1.0.0-dev'
path = '../pallets/quamtum-portal'

[dependencies.fp-self-contained]
default-features = false
branch = "polkadot-v0.9.27"
git = 'https://github.com/paritytech/frontier.git'

[dependencies.frame-benchmarking]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-executive]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-support]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-system]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.frame-system-benchmarking]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true

[dependencies.frame-system-rpc-runtime-api]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-aura]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-balances]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-treasury]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-base-fee]
default-features = false
branch = "polkadot-v0.9.27"
git = "https://github.com/paritytech/frontier.git"

[dependencies.pallet-dynamic-fee]
default-features = false
branch = "polkadot-v0.9.27"
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-ethereum]
default-features = false
branch = "polkadot-v0.9.27"
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm]
default-features = false
branch = "polkadot-v0.9.27"
git = 'https://github.com/paritytech/frontier.git'

[dependencies.pallet-evm-precompile-modexp]
git = 'https://github.com/paritytech/frontier.git'
branch = "polkadot-v0.9.27"
default-features = false

[dependencies.pallet-evm-precompile-sha3fips]
git = 'https://github.com/paritytech/frontier.git'
branch = "polkadot-v0.9.27"
default-features = false

[dependencies.pallet-evm-precompile-simple]
git = 'https://github.com/paritytech/frontier.git'
branch = "polkadot-v0.9.27"
default-features = false

[dependencies.pallet-grandpa]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-randomness-collective-flip]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-sudo]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-timestamp]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-transaction-payment]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.2'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-block-builder]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-consensus-aura]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-core]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-inherents]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-io]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-offchain]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-runtime]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-session]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-std]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-transaction-pool]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.sp-version]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'

[dependencies.log]
version = "0.4.14"
default-features = false

[features]
aura = []
default = [
    'std',
    'aura',
]
manual-seal = []
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-ethereum/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
]
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'log/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'fp-rpc/std',
    'fp-self-contained/std',
    'pallet-base-fee/std',
    'pallet-dynamic-fee/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-evm-precompile-simple/std',
    'pallet-evm-precompile-sha3fips/std',
    'frame-benchmarking/std',
    "pallet-treasury/std",
]

[package]
authors = ['Ferrum Network <https://github.com/ferrumnet/ferrum-x-network>']
edition = '2021'
homepage = 'https://ferrum.network'
license = 'Unlicense'
name = 'ferrum-x-runtime'
publish = false
repository = 'https://github.com/ferrumnet/ferrum-x-network'
version = '0.0.1'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
