[package]
name = "ethabi-nostd"
version = "1.0.0"
authors = ["Ferrum Network <info@ferrum.network>"]
edition = "2021"
keywords = ["ethereum", "eth", "abi", "solidity"]
license = "Apache-2.0"
description = "ETH ABI-encode/decode nostd. Forked from: https://github.com/Snowfork/ethabi-decode/blob/master/Cargo.toml"

[dependencies]
ethereum-types = { version = "0.14.1", default-features = false }
sp-std = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
tiny-keccak = { version = "2.0.2", features = ["sha3", "keccak"] }

[dev-dependencies]
hex = { version = "0.4.3" }
hex-literal = "0.3.4"
paste = "1.0.6"
uint = { version = "0.9.3", default-features = false }

[features]
default = ["std"]
std = [
	'ethereum-types/std',
	'sp-std/std',
]
