[package]
name = "ethabi-nostd"
version = "1.0.0"
authors = ["Ferrum Network <info@ferrum.network>"]
edition = "2021"
keywords = ["ethereum", "eth", "abi", "solidity"]
license = "Apache-2.0"
description = "ETH ABI-encode/decode nostd. Forked from: https://github.com/Snowfork/ethabi-decode/blob/master/Cargo.toml"

[dependencies]
ethereum-types = { workspace = true }
sp-std = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
paste = { workspace = true }
uint = { workspace = true }

[features]
default = ["std"]
std = [
	'ethereum-types/std',
	'sp-std/std',
]
