[package]
name = "pallet-btc-pools"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0", optional = true }
frame-support = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
bitcoin = { version = "0.31.0" }
bitcoincore-rpc = "0.18.0"
subxt = { version = "0.32.0" }
subxt-signer = { version = "0.32.0", features = ["subxt"]}
hex = "0.4.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha256 = "1.4.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-io = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
