[package]
name = "pallet-ethereum-xcm"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Xcm Transact compatibility for pallet-etherum."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/frontier/"
version = "1.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", default-features = false, features = ["with-codec"] }
serde = { version = "1.0.101", default-features = false, optional = true }

# Parity
ethereum-types = { version = "0.14", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = ["derive"] }
rlp = { version = "0.5", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
pallet-timestamp = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-io = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-std = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }

# Frontier
ferrum-primitives = { default-features = false, path = "../../primitives" }
fp-ethereum = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-evm = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-rpc = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
fp-self-contained = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }
pallet-evm = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0", features = ["forbid-evm-reentrancy"] }

# Benchmarks
frame-benchmarking = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0", optional = true }

[dev-dependencies]
# pallet-evm-precompile-proxy = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0" }

pallet-ethereum = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0", features = [
	"forbid-evm-reentrancy",
	"std",
] }
pallet-evm = { git = 'https://github.com/paritytech/frontier.git', default-features = false, branch = "polkadot-v1.1.0", features = [
	"forbid-evm-reentrancy",
	"std",
] }
pallet-proxy = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0", features = ["std"] }

hex = { version = "0.4.3", default-features = false }
# Parity
libsecp256k1 = { version = "0.7", default-features = false, features = ["hmac", "static-context"] }
# Substrate FRAME
pallet-balances = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0", features = ["std"] }
# Substrate
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
	"ethereum-types/std",
	"ethereum/std",
	# Frontier
	"fp-ethereum/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Substrate FRAME
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	# Parity
	"parity-scale-codec/std",
	"rlp/std",
	"scale-info/std",
	"serde",
	# Substrate
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"ferrum-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
